# city_simulation

./: Cargo.toml  README.md
assets/settings/: fps_cap_mode.json  fps_cap_slider.json  quality.json  vsync_mode.json
assets/shaders/: animate_shader.wgsl  custom_vertex_attribute.wgsl  first_shader.wgsl
config/: framerate.json
src/: common.rs  framerate.rs  game.rs  globals.rs  graphics.rs  lib.rs  main.rs  rng.rs  settings_io.rs
src/menus/: menu.rs  mod.rs  settings.rs  splash.rs  ui.rs
src/resources/: mod.rs
src/settings/: framerate.rs  globals.rs  mod.rs  settings_io.rs
src/systems/: common.rs  game.rs  menu.rs  mod.rs  splash.rs  ui.rs
