[package]
name = "city_simulation"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
# opt-level = 1	

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = {version="0.15.3",features = ["dynamic_linking"]}
bevy_framepace = "0.18.1"
iyes_perf_ui = "0.4.0"
serde = "1.0.219"
serde_json = "1.0.140"


